gitting up on github

--- a/documentation/toc-everything.html
+++ b/documentation/toc-everything.html
@@ -14,7 +14,9 @@
 <hr />
   <h2 class="toc">All Classes</h2>
     <a target="mainFrame" href="fire.Fire-class.html"
-     >fire.Fire</a><br />  <h2 class="toc">All Variables</h2>
+     >fire.Fire</a><br />  <h2 class="toc">All Functions</h2>
+    <a target="mainFrame" href="fire-module.html#fireSize"
+     >fire.fireSize</a><br />  <h2 class="toc">All Variables</h2>
     <a target="mainFrame" href="fire-module.html#__package__"
      >fire.__package__</a><br /><hr />
 <span class="options">[<a href="javascript:void(0);" class="privatelink"
