--- a/documentation/toc-fire-module.html
+++ b/documentation/toc-fire-module.html
@@ -14,7 +14,9 @@
 <hr />
   <h2 class="toc">Classes</h2>
     <a target="mainFrame" href="fire.Fire-class.html"
-     >Fire</a><br />  <h2 class="toc">Variables</h2>
+     >Fire</a><br />  <h2 class="toc">Functions</h2>
+    <a target="mainFrame" href="fire-module.html#fireSize"
+     >fireSize</a><br />  <h2 class="toc">Variables</h2>
     <a target="mainFrame" href="fire-module.html#__package__"
      >__package__</a><br /><hr />
 <span class="options">[<a href="javascript:void(0);" class="privatelink"
